Change references from "Aeris Interactive" to 'Aeris.js'

--- a/examples/amd/index.html
+++ b/examples/amd/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Aeris Interactive - AMD Example</title>
+  <title>Aeris.js - AMD Example</title>
 
   <link rel="stylesheet" href="../css/example.css"/>
   <link rel="shortcut icon" type="image/x-icon" href="../weather.ico"/>
