--- a/examples/animations/single.html
+++ b/examples/animations/single.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Aeris Interactive - Animation Example</title>
+  <title>Aeris.js - Animation Example</title>
 
   <link rel="stylesheet" href="../css/example.css"/>
   <link rel="shortcut icon" type="image/x-icon" href="../weather.ico"/>
@@ -21,10 +21,10 @@
 <div class="prompt">
   <h1>Example: Animation</h1>
 
-  <h2>Aeris Interactive</h2>
+  <h2>Aeris.js</h2>
 
   <p>
-    Any <a href="http://www.hamweather.com/support/documentation/aeris/interactive-tiles/" target="_blank">Aeris Interactive tile</a> can be animated using the <code>aeris.maps.animations.TileAnimation</code> object. Animations work by rapidly showing and hiding tile layers associated with a specific date. It is also possible to animate several tiles layers along the same timeline using the <code>aeris.maps.animations.AnimationSync</code> object. See the <a href="sync.html">Animation Sync example.</a>
+    Any <a href="http://www.hamweather.com/support/documentation/aeris/interactive-tiles/" target="_blank">Aeris.js tile</a> can be animated using the <code>aeris.maps.animations.TileAnimation</code> object. Animations work by rapidly showing and hiding tile layers associated with a specific date. It is also possible to animate several tiles layers along the same timeline using the <code>aeris.maps.animations.AnimationSync</code> object. See the <a href="sync.html">Animation Sync example.</a>
   </p>
 </div>
 
