--- a/examples/animations/sync.html
+++ b/examples/animations/sync.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Aeris Interactive - Animation Sync Example</title>
+  <title>Aeris.js - Animation Sync Example</title>
 
   <link rel="stylesheet" href="../css/example.css"/>
   <link rel="shortcut icon" type="image/x-icon" href="../weather.ico"/>
@@ -21,7 +21,7 @@
 <div class="prompt">
   <h1>Example: Animation Sync</h1>
 
-  <h2>Aeris Interactive</h2>
+  <h2>Aeris.js</h2>
 
   <p>
     In order to animate multiple tile layers, use an <code>aeris.maps.animations.AnimationSync</code> object. The <code>AnimationSync</code> keeps multiple animations on the same timeline.
