--- a/examples/appbuilders/maps.html
+++ b/examples/appbuilders/maps.html
@@ -65,7 +65,7 @@
 <div class="prompt">
   <h1>Example: Map AppBuilder</h1>
 
-  <h2>Aeris Interactive</h2>
+  <h2>Aeris.js</h2>
 
   <p>The <code>aeris.MapBuilder</code> allows you to easily create a full-featured weather map application using a simple configuration object.</p>
 </div>
