--- a/examples/geoservices/geocode.html
+++ b/examples/geoservices/geocode.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Aeris Interactive - Geosearch Example</title>
+  <title>Aeris.js - Geosearch Example</title>
 
   <link rel="shortcut icon" type="image/x-icon" href="../weather.ico"/>
   <link rel="stylesheet" href="../css/example.css"/>
@@ -25,13 +25,13 @@
 
   <div class="prompt">
     <h1>Geocode example</h1>
-    <h2>Aeris Interactive</h2>
+    <h2>Aeris.js</h2>
 
     <p>
-      An <code>aeris.geocode.GeocodeServiceInterface</code> allows you to convert a named location to a latitude/longitude coordinate. Aeris Interactive provides wrappers around the <a href="https://developers.google.com/maps/documentation/geocoding/" target="_blank">Google Maps Geocoding Service</a>, as well the <a href="http://www.mapquestapi.com/geocoding/" target="_blank">MapQuest Geocode API</a>
+      An <code>aeris.geocode.GeocodeServiceInterface</code> allows you to convert a named location to a latitude/longitude coordinate. Aeris.js provides wrappers around the <a href="https://developers.google.com/maps/documentation/geocoding/" target="_blank">Google Maps Geocoding Service</a>, as well the <a href="http://www.mapquestapi.com/geocoding/" target="_blank">MapQuest Geocode API</a>
     </p>
     <p>
-      By providing multiple implementations of single interface, Aeris Interactive allows you to easily switch between geocoding services, without affecting other code.
+      By providing multiple implementations of single interface, Aeris.js allows you to easily switch between geocoding services, without affecting other code.
     </p>
     <p>
       To get started <strong>enter a place name in search input, then click the "Geocode" button.</strong>
