--- a/examples/geoservices/geolocate.html
+++ b/examples/geoservices/geolocate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Aeris Interactive - Geosearch Example</title>
+  <title>Aeris.js - Geosearch Example</title>
 
   <link rel="shortcut icon" type="image/x-icon" href="../weather.ico"/>
   <link rel="stylesheet" href="../css/example.css"/>
@@ -18,7 +18,7 @@
 
   <div class="prompt">
     <h1>Geolocation Example</h1>
-    <h2>Aeris Interactive</h2>
+    <h2>Aeris.js</h2>
 
     <p>
       This example demonstrates the usage of aeris geolocation services. <b>Click the "Find Me!"</b> to trigger geolocation. The app will attempt to use <a href="https://developer.mozilla.org/en-US/docs/WebAPI/Using_geolocation" target="_blank">native HTML5 geolocation</a>, or fallback to IP-based geolocation using <a href="https://freegeoip.net/" target="_blank">freegeoip</a>.
