--- a/examples/markercollections/index.html
+++ b/examples/markercollections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Aeris Interactive - Marker Collection Example</title>
+  <title>Aeris.js - Marker Collection Example</title>
 
   <link rel="stylesheet" href="../css/example.css"/>
   <link rel="shortcut icon" type="image/x-icon" href="../weather.ico"/>
@@ -19,7 +19,7 @@
   <div class="prompt">
     <h1>Example: Marker Collection</h1>
 
-    <h2>Aeris Interactive</h2>
+    <h2>Aeris.js</h2>
 
     <p>
       The Aeris API provides several data-sets which are associated with lat/lon coordinates (e.g. earthquake, fire, lightning, and storm reports). In order to render this data points on a map, you can use a <code>PointDataMarkers</code>. A <code>PointDataMarkers</code> creates markers for every model in a data collection, and renders the model on the map.
