--- a/examples/layers/multi.html
+++ b/examples/layers/multi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Aeris Interactive - Tile Layers Example</title>
+  <title>Aeris.js - Tile Layers Example</title>
 
   <link rel="stylesheet" href="../css/example.css"/>
   <link rel="shortcut icon" type="image/x-icon" href="../weather.ico"/>
@@ -19,13 +19,13 @@
 
 <div class="prompt">
   <h1>Example: Tile Layers</h1>
-  <h2>Aeris Interactive</h2>
+  <h2>Aeris.js</h2>
 
   <p>
     The Aeris API provides a set of weather "tile" images, which can be overlaid on a map. <strong>Select one or or weather metrics to render the tile layer.</strong>
   </p>
   <p>
-    See <a href="http://www.hamweather.com/support/documentation/aeris/interactive-tiles/" target="_blank">Aeris Interactive Tile documentation</a> for information about available tile layers.
+    See <a href="http://www.hamweather.com/support/documentation/aeris/interactive-tiles/" target="_blank">Aeris.js Tile documentation</a> for information about available tile layers.
   </p>
 
   <small>
