MapApp: Fullscreen Module

--- a/examples/appbuilders/maps.html
+++ b/examples/appbuilders/maps.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" href="../css/example.css"/>
 
   <style type="text/css">
-    #app, .aeris-maps-app, .aeris-mapContainer, .mapCanvasRegion, .mapCanvas {
-      width: 100%;
-      height: 100%;
+    #app {
+      width: 90%;
+      height: 90%;
+      margin: 5% auto;
     }
 
-    .aeris-maps-app {
+    .aeris-maps-app, .aeris-mapContainer, .mapCanvasRegion, .mapCanvas {
       width: 100%;
       height: 100%;
     }
