SpecRunner: minor changes to test asset paths

--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -3,7 +3,7 @@
 <head>
   <title>Aeris JS API - Jasmine Spec Runner</title>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png"/>
-  <link rel="stylesheet" type="text/css" href="lib/jasmine.css">
+  <link rel="stylesheet" type="text/css" href="../bower_components/jasmine/lib/jasmine-core/jasmine.css">
   <script src="../bower_components/requirejs/require.js" data-main="SpecRunner"></script>
 </head>
 <body>
