Use aeris.js from CDN in examples

--- a/examples/appbuilders/maps.html
+++ b/examples/appbuilders/maps.html
@@ -33,7 +33,7 @@
   </style>
 
   <script type="text/javascript" src="../apikeys.js"></script>
-  <script type="text/javascript" src="../../build/packages/mapapp.js"></script>
+  <script type="text/javascript" src="//cdn.aerisjs.com/mapapp.js"></script>
   <!--
     Note that it is not required to load the Google Maps library when
     using the MapBuilder -- it will load the library for you, using the
