Update demo docs:
- Include link to jsFiddle sandbox
- Link to demo docs from usage docs

--- a/examples/index.html
+++ b/examples/index.html
@@ -259,5 +259,11 @@
   <li><a href="layers/multi.html">Tile Layers (mutliple)</a> (<a href="https://github.com/hamweather/aerisjs/tree/master/examples/layers/multi.html" target="_blank">source</a>)</li>
   <li><a href="markercollections/index.html">MarkerCollection</a> (<a href="https://github.com/hamweather/aerisjs/tree/master/examples/markercollections/index.html" target="_blank">source</a>)</li>
 </ul>
+
+<h2>jsFiddle</h2>
+
+<p>
+  You can play with the Aeris.js library using our <a href="http://jsfiddle.net/zCr2f/3/" target="_blank">jsFiddle sandbox</a>
+</p>
 </body>
 </html>
