Docs: Add animation exmaples to list of demos

--- a/examples/index.html
+++ b/examples/index.html
@@ -257,6 +257,8 @@
   <li><a href="geoservices/geolocate.html">Geolocate</a> (<a href="https://github.com/hamweather/aerisjs/tree/master/examples/geoservices/geolocate.html" target="_blank">source</a>)</li>
   <li><a href="layers/single.html">Tile Layers (single layer)</a> (<a href="https://github.com/hamweather/aerisjs/tree/master/examples/layers/single.html" target="_blank">source</a>)</li>
   <li><a href="layers/multi.html">Tile Layers (mutliple)</a> (<a href="https://github.com/hamweather/aerisjs/tree/master/examples/layers/multi.html" target="_blank">source</a>)</li>
+  <li><a href="animations/single.html">Animation</a> (<a href="https://github.com/hamweather/aerisjs/tree/master/examples/animations/single.html" target="_blank">source</a>)</li>
+  <li><a href="animations/sync.html">Animation (sync)</a> (<a href="https://github.com/hamweather/aerisjs/tree/master/examples/animations/sync.html" target="_blank">source</a>)</li>
   <li><a href="markercollections/index.html">MarkerCollection</a> (<a href="https://github.com/hamweather/aerisjs/tree/master/examples/markercollections/index.html" target="_blank">source</a>)</li>
 </ul>
 
