Examples: Use leaflet (when all features supported)
or switch aeris.js lib to gmaps

--- a/examples/geoservices/geolocate.html
+++ b/examples/geoservices/geolocate.html
@@ -3,6 +3,10 @@
 <head>
   <title>Aeris.js - Geosearch Example</title>
 
+  <!-- Leaflet -->
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css"/>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.js"></script>
+
   <link rel="shortcut icon" type="image/x-icon" href="../weather.ico"/>
   <link rel="stylesheet" href="../css/example.css"/>
 
