--- a/examples/geoservices/geocode.html
+++ b/examples/geoservices/geocode.html
@@ -3,10 +3,13 @@
 <head>
   <title>Aeris.js - Geosearch Example</title>
 
+  <!-- Leaflet -->
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css"/>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.js"></script>
+
   <link rel="shortcut icon" type="image/x-icon" href="../weather.ico"/>
   <link rel="stylesheet" href="../css/example.css"/>
 
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
   <script type="text/javascript" src="http://cdn.aerisjs.com/aeris.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script type="text/javascript" src="../apikeys.js"></script>
