AMD Example uses Leaflet

--- a/examples/amd/index.html
+++ b/examples/amd/index.html
@@ -8,6 +8,10 @@
 
   <script type="text/javascript" src="../apikeys.js"></script>
   <script type="text/javascript" data-main="src/app" src="bower_components/requirejs/require.js"></script>
+
+  <!-- When using Leaflet, make sure to include the Leaflet stylesheet -->
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css"/>
+
 </head>
 <body>
 <div id="map-canvas"></div>
