--- a/examples/geoservices/geolocate.html
+++ b/examples/geoservices/geolocate.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../css/example.css"/>
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-  <script type="text/javascript" src="http://cdn.aerisjs.com/aeris.js"></script>
+  <script type="text/javascript" src="http://cdn.aerisjs.com/aeris-gmaps-plus.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script type="text/javascript" src="../apikeys.js"></script>
 </head>
