--- a/examples/layers/multi.html
+++ b/examples/layers/multi.html
@@ -165,6 +165,10 @@
         label: 'Radar'
       },
       {
+        className: 'Precip',
+        label: 'Precip'
+      },
+      {
         className: 'Satellite',
         label: 'Infrared Satellite'
       },
