--- a/examples/layers/multi.html
+++ b/examples/layers/multi.html
@@ -61,7 +61,7 @@
         <% if (layer.zIndex !== false) { %>
           <label>
             Z Index
-            <input type="range" class="zIndex" value="1" min="1" max="10"/>
+            <input type="range" class="zIndex" value="0" min="0" max="100"/>
           </label>
         <% } %>
       </div>
@@ -133,6 +133,15 @@
 
     // Change the layer z index
     layer.setZIndex(zIndex);
+  });
+
+  // Update the zIndex sliders to
+  // match the initial zIndex of each layer.
+  $('.zIndex').each(function() {
+    var layerName = $(this).parents('[data-layer]').data('layer');
+    var layer = layers[layerName];
+
+    $(this).val(layer.getZIndex());
   });
 
 
