--- a/examples/markercollections/index.html
+++ b/examples/markercollections/index.html
@@ -17,7 +17,7 @@
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=geometry"></script>
 
-  <script type="text/javascript" src="/build/lib/aeris-gmaps.js"></script>
+  <script type="text/javascript" src="//cdn.aerisjs.com/aeris-gmaps.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script type="text/javascript" src="../apikeys.js"></script>
 </head>
