minor text change

--- a/examples/markercollections/index.html
+++ b/examples/markercollections/index.html
@@ -59,7 +59,7 @@
 <div class="controls">
   <ul>
     <li>
-      <strong>Storm Report Types</strong>
+      <strong>Storm Report Filters</strong>
     </li>
     <li>
       <label>
