Update _.template method to support underscore 1.7.0

--- a/examples/layers/multi.html
+++ b/examples/layers/multi.html
@@ -191,7 +191,7 @@
       }
     ]
     var template = $('#layer-controls-template').html();
-    var controlsHtml = _.template(template, { layers: layerData });
+    var controlsHtml = _.template(template)({ layers: layerData });
 
     $('.controls').html(controlsHtml);
   }
