--- a/examples/sandbox/index.html
+++ b/examples/sandbox/index.html
@@ -17,5 +17,15 @@
 </head>
 <body>
   <div id="map-canvas"></div>
+
+  <div id="animation-time"
+      style="
+        position: absolute;
+        bottom: 20px;
+        right: 50px;
+        background: white;
+        padding: 5px;
+      "
+  ></div>
 </body>
 </html>
