--- a/examples/sandbox/index.html
+++ b/examples/sandbox/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="../../bower_components/leaflet.markercluster/dist/MarkerCluster.css"/>-->
   <link rel="shortcut icon" type="image/x-icon" href="../weather.ico"/>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry&key=AIzaSyDRrNNGdHDhWP63kW3_vCg4S9CZsmwRPyE"></script>
 
   <script type="text/javascript" src="../apikeys.js"></script>
