--- a/examples/sandbox/index.html
+++ b/examples/sandbox/index.html
@@ -17,5 +17,15 @@
 </head>
 <body>
 <div id="map-canvas"></div>
+<div id="info"
+     style="
+      position: absolute;
+       top: 20px;
+       right: 20px;
+       background: #fff;
+       border: 1px solid #2c2c2c;
+       padding: 10px;
+     "
+>...</div>
 </body>
 </html>
