--- a/examples/sandbox/index.html
+++ b/examples/sandbox/index.html
@@ -6,12 +6,12 @@
   <link rel="stylesheet" href="../css/example.css"/>
 
   <!--Leaflet-->
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css"/>
+  <!--<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css"/>
   <link rel="stylesheet" href="../../bower_components/leaflet.markercluster/dist/MarkerCluster.Default.css"/>
-  <link rel="stylesheet" href="../../bower_components/leaflet.markercluster/dist/MarkerCluster.css"/>
+  <link rel="stylesheet" href="../../bower_components/leaflet.markercluster/dist/MarkerCluster.css"/>-->
 
   <!--Google-->
-  <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry&key=AIzaSyDRrNNGdHDhWP63kW3_vCg4S9CZsmwRPyE"></script>-->
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry&key=AIzaSyDRrNNGdHDhWP63kW3_vCg4S9CZsmwRPyE"></script>
 
   <link rel="shortcut icon" type="image/x-icon" href="../weather.ico"/>
 
@@ -20,7 +20,7 @@
   <script type="text/javascript" src="../../bower_components/requirejs/require.js" data-main="js/init"></script>
 </head>
 <body>
-<div id="map-canvas"></div>
+<div id="map-canvas" style="width: 800px; height: 600px;"></div>
 <div id="info"
      style="
       position: absolute;
